--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,12 @@
 .App {
 	width: 100%;
-	height: 100vh;
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	flex-direction: column;
+	.cart-area {
+		width: 100%;
+		display: flex;
+		justify-content: end;
+	}
 }
